<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_save_note">Сохранить заметку</string>
    <string name="nameNote">Имя заметки:</string>
    <string name="textNote">Текст заметки:</string>
    <string name="hintNameNote">Введите название заметки</string>
    <string name="hintTextNote">Введите текст заметки</string>

</resources>
